<resources>
    <string name="app_name" translatable="false">BGG</string>
    <string name="description">Description</string>
    <string name="rating_text">Rating:\u0020</string>
    <string name="game_info">Game Info</string>
    <string name="most_popular_games">MOST POPULAR GAMES</string>
    <string name="credits"><b>Credits:</b> This Application was developed by Carolina Couto, Joana Campos and Nuno Cardeal and it was oriented by Fernando Carvalho. This application was based on the API given by Board Game Atlas</string>
    <string name="published">"Published in: "</string>
    <string name="min_player">Min Players:\u0020</string>
    <string name="max_player">Max Players:\u0020</string>
    <string name="min_age">Min Age:\u0020</string>
    <string name="rules">Rules:\u0020</string>
    <string name="designers">Designers</string>
    <string name="credits_button">Credits</string>
    <string name="img_error_url">Could not open official site!</string>
    <string name="arrow_next" translatable="false"><![CDATA[->]]></string>
    <string name="arrow_previous" translatable="false"><![CDATA[<-]]></string>
    <string name="categories">Categories</string>
    <string name="mechanics">Mechanics</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to Delete?</string>
    <string name="cancel">Cancel</string>
    <string name="preferences_title">Preferences</string>
    <string name="min_15">15 minutes</string>
    <string name="min_30">30 minutes</string>
    <string name="hour_1">1 hour</string>
    <string name="channel_description" translatable="false">\"Channel to notificate updates to Favorites\"</string>
    <string name="channel_name" translatable="false">FavoritesChannel</string>
    <string name="save">Save</string>
    <string name="favorites">Favorites</string>
    <string name="lists">Lists</string>
    <string name="update">"Update on "</string>
    <string name="preferences_text">What is the time that you want the app to search and notify you if there are new games in the next Favorite List you will create?</string>
</resources>
